srcs/nginx/ingress_nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: nginx-ingress
spec:
  backend:
    serviceName: nginx
    servicePort: 80
